--- a/index.html
+++ b/index.html
@@ -23,25 +23,25 @@
   </head>
 
   <body>
-    <div class="container">
-      <header>
-        <!--logo-->
-        <img
-          src="images/logo/Reservia.svg"
-          class="logo"
-          alt="logo agence de voyage"
-        />
-        <!--menu-->
-        <ul class="menu">
-          <div class="menu_responsive">
-            <li class="menu_link"><a href="#hostings">Hébergements</a></li>
-            <li class="menu_link"><a href="#activities">Activités</a></li>
-          </div>
-          <li class="menu_login"><a href="#">S'inscrire</a></li>
-        </ul>
-      </header>
+    <nav>
+      <!--logo-->
+      <img
+        src="images/logo/Reservia.svg"
+        class="logo"
+        alt="logo agence de voyage"
+      />
+      <!--menu-->
+      <ul class="menu">
+        <div class="menu_responsive">
+          <li class="menu_link"><a href="#hostings">Hébergements</a></li>
+          <li class="menu_link"><a href="#activities">Activités</a></li>
+        </div>
+        <li class="menu_login"><a href="#">S'inscrire</a></li>
+      </ul>
+    </nav>
 
-      <section class="search_section">
+    <main class="container">
+      <header class="header_section">
         <!--title-->
         <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
         <p>En plein centre ville ou en pleine nature</p>
@@ -117,13 +117,13 @@
           </div>
           <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
-      </section>
+      </header>
 
       <!--hostings-->
       <section class="hostings">
         <!--main hostings-->
         <div class="main_hostings">
-          <h2 class="main_hostings_title">Hébergements à Marseille</h2>
+          <h2>Hébergements à Marseille</h2>
           <div class="main_hostings_figures">
             <a href="#"
               ><figure class="main_hostings_figure">
@@ -143,9 +143,11 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="main_hostings_figcaption">
-                  <h3>Auberge la Cannebière</h3>
-                  <p>Nuit à partir de <strong>25 €</strong></p>
-                  <div class="stars">
+                  <h3 class="main_hostings_title">Auberge la Cannebière</h3>
+                  <p class="main_hostings_text">
+                    Nuit à partir de <strong>25 €</strong>
+                  </p>
+                  <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -174,9 +176,11 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="main_hostings_figcaption">
-                  <h3>hôtel du port</h3>
-                  <p>Nuit à partir de <strong>52 €</strong></p>
-                  <div class="stars">
+                  <h3 class="main_hostings_title">Hôtel du port</h3>
+                  <p class="main_hostings_text">
+                    Nuit à partir de <strong>52 €</strong>
+                  </p>
+                  <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -205,9 +209,11 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="main_hostings_figcaption">
-                  <h3>Hôtel les mouettes</h3>
-                  <p>Nuit à partir de <strong>76 €</strong></p>
-                  <div class="stars">
+                  <h3 class="main_hostings_title">Hôtel les mouettes</h3>
+                  <p class="main_hostings_text">
+                    Nuit à partir de <strong>76 €</strong>
+                  </p>
+                  <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -235,9 +241,11 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="main_hostings_figcaption">
-                  <h3>Hôtel de la mer</h3>
-                  <p>Nuit à partir de <strong>46 €</strong></p>
-                  <div class="stars">
+                  <h3 class="main_hostings_title">Hôtel de la mer</h3>
+                  <p class="main_hostings_text">
+                    Nuit à partir de <strong>46 €</strong>
+                  </p>
+                  <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -266,11 +274,11 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="main_hostings_figcaption">
-                  <h3>Auberge le panier</h3>
-                  <p div class="popular_hostings_text">
+                  <h3 class="main_hostings_title">Auberge le panier</h3>
+                  <p class="main_hostings_text">
                     Nuit à partir de <strong>23 €</strong>
                   </p>
-                  <div class="stars">
+                  <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -299,11 +307,11 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="main_hostings_figcaption">
-                  <h3>Hôtel chez Amina</h3>
-                  <p class="popular_hostings_text">
+                  <h3 class="main_hostings_title">Hôtel chez Amina</h3>
+                  <p class="main_hostings_text">
                     Nuit à partir de <strong>96 €</strong>
                   </p>
-                  <div class="stars">
+                  <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -319,7 +327,7 @@
         <!--popular_hostings-->
         <div class="popular_hostings">
           <div class="popular_hostings_head">
-            <h2>Les plus populaires</h2>
+            <h2 class="popular_hostings_heading">Les plus populaires</h2>
             <i class="fas fa-chart-line fa-2x"></i>
           </div>
           <div class="popular_hostings_figures">
@@ -342,12 +350,13 @@
                 />
 
                 <figcaption class="popular_hostings_figcaption">
-                  <h3>
-                    Hôtel le soleil du <br />
-                    matin
+                  <h3 class="popular_hostings_title">
+                    Hôtel le soleil du matin
                   </h3>
-                  <p>Nuit à partir de <strong>128 €</strong></p>
-                  <div class="stars">
+                  <p class="popular_hostings_text">
+                    Nuit à partir de <strong>128 €</strong>
+                  </p>
+                  <div class="popular_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -376,9 +385,13 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="popular_hostings_figcaption">
-                  <h3>Au coeur de l'eau <br />Chambres d'hôtes</h3>
-                  <p>Nuit à partir de <strong>71 €</strong></p>
-                  <div class="stars">
+                  <h3 class="popular_hostings_title">
+                    Au coeur de l'eau Chambres d'hôtes
+                  </h3>
+                  <p class="popular_hostings_text">
+                    Nuit à partir de <strong>71 €</strong>
+                  </p>
+                  <div class="popular_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -407,12 +420,13 @@
                   alt="chambre d'hôtel à marseille"
                 />
                 <figcaption class="popular_hostings_figcaption">
-                  <h3>
-                    Hôtel tout bleu et <br />
-                    blanc
+                  <h3 class="popular_hostings_title">
+                    Hôtel tout bleu et blanc
                   </h3>
-                  <p>Nuit à partir de <strong>68 €</strong></p>
-                  <div class="stars">
+                  <p class="popular_hostings_text">
+                    Nuit à partir de <strong>68 €</strong>
+                  </p>
+                  <div class="popular_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -435,15 +449,15 @@
             <figure class="activities_figure">
               <img
                 srcset="
-                  images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 310w,
-                  images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg  160w,
-                  images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 160w,
-                  images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg  130w
+                  images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 5616w,
+                  images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg  2808w,
+                  images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 1404w,
+                  images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg   702w
                 "
                 sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 160px,
+                          (max-width: 576px) 310px,
                             310px"
                 src="reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
                 alt="chambre d'hôtel à marseille"
@@ -458,17 +472,17 @@
               <figure class="activities_figures_card">
                 <img
                   srcset="
-                    images/activites/1_xlarge/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 310w,
-                    images/activites/2_large/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg  160w,
-                    images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg 160w,
-                    images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg  130w
+                    images/activites/1_xlarge/paul-hermann-QFTrLdQIRhI-unsplash.jpg 2843w,
+                    images/activites/2_large/paul-hermann-QFTrLdQIRhI-unsplash.jpg  1422w,
+                    images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg  711w,
+                    images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg   356w
                   "
                   sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 130px,
+                          (max-width: 576px) 310px,
                             310px"
-                  src="reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                  src="paul-hermann-QFTrLdQIRhI-unsplash.jpg"
                   alt="activité à marseille"
                 />
                 <h3 class="activities_title">Fort de Pomègues</h3>
@@ -479,18 +493,18 @@
               <figure class="activities_figures_card">
                 <img
                   srcset="
-                    images/activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 310w,
-                    images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg  160w,
-                    images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 160w,
-                    images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg  130w
+                    images/activites/1_xlarge/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 5184w,
+                    images/activites/2_large/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg  2592w,
+                    images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg 1296w,
+                    images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg   648w
                   "
                   sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 130px,
+                          (max-width: 576px) 310px,
                             310px"
                   src="kevin-hikari-rV_Qd1l-VXg-unsplash.jpg"
-                  alt=""
+                  alt="activité à marseille"
                 />
                 <h3 class="activities_title">Îles du Frioul</h3>
               </figure>
@@ -502,15 +516,15 @@
             <figure class="activities_figure">
               <img
                 srcset="
-                  images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 310w,
-                  images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg  160w,
-                  images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 160w,
-                  images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg  130w
+                  images/activites/1_xlarge/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 4846w,
+                  images/activites/2_large/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg  2423w,
+                  images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg 1212w,
+                  images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg   606w
                 "
                 sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 130px,
+                          (max-width: 576px) 310px,
                             310px"
                 src="kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
                 alt="activité à marseille"
@@ -525,15 +539,15 @@
               <figure class="activities_figures_card">
                 <img
                   srcset="
-                    images/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg 310w,
-                    images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg  160w,
-                    images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 160w,
-                    images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg  130w
+                    images/activites/1_xlarge/florian-wehde-xW9e8gdotxI-unsplash.jpg 4712w,
+                    images/activites/2_large/florian-wehde-xW9e8gdotxI-unsplash.jpg  2356w,
+                    images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg 1178w,
+                    images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg   589w
                   "
                   sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 320px,
+                          (max-width: 576px) 310px,
                             310px"
                   src="florian-wehde-xW9e8gdotxI-unsplash.jpg"
                   alt="activité à marseille"
@@ -546,15 +560,15 @@
               <figure class="activities_figures_card">
                 <img
                   srcset="
-                    images/activites/1_xlarge/lena-paulin-wH2-EJoDcV0-unsplash.jpg 310w,
-                    images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg  160w,
-                    images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg 160w,
-                    images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg  130w
+                    images/activites/1_xlarge/lena-paulin-wH2-EJoDcV0-unsplash.jpg 4032w,
+                    images/activites/2_large/lena-paulin-wH2-EJoDcV0-unsplash.jpg  2016w,
+                    images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg 1008w,
+                    images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg   504w
                   "
                   sizes="(min-width: 1024px) 310px,
                           (max-width: 1024px) 160px,
                           (max-width: 768px) 160px,
-                          (max-width: 576px) 320px,
+                          (max-width: 576px) 310px,
                             310px"
                   src="lena-paulin-wH2-EJoDcV0-unsplash.jpg"
                   alt="activité à marseille"
@@ -565,36 +579,35 @@
           </div>
         </div>
       </section>
+    </main>
+    <!--footer-->
+    <footer>
+      <div class="footer_items">
+        <section class="footer_item">
+          <h3>A propos</h3>
+          <ul>
+            <li><a href="#">Fonctionnement du site</a></li>
+            <li><a href="#">Conditions générales de vente</a></li>
+            <li><a href="#">Données et confidentialité</a></li>
+          </ul>
+        </section>
 
-      <!--footer-->
-      <footer>
-        <div class="footer_items">
-          <div class="footer_item">
-            <h4>A propos</h4>
-            <ul>
-              <li><a href="#">Fonctionnement du site</a></li>
-              <li><a href="#">Conditions générales de vente</a></li>
-              <li><a href="#">Données et confidentialité</a></li>
-            </ul>
-          </div>
+        <section class="footer_item">
+          <h3>Nos hébergements</h3>
+          <ul>
+            <li><a href="#">Charte qualité</a></li>
+            <li><a href="#">Soumettre votre hôtel</a></li>
+          </ul>
+        </section>
 
-          <div class="footer_item">
-            <h4>Nos hébergements</h4>
-            <ul>
-              <li><a href="#">Charte qualité</a></li>
-              <li><a href="#">Soumettre votre hôtel</a></li>
-            </ul>
-          </div>
-
-          <div class="footer_item">
-            <h4>Assistance</h4>
-            <ul>
-              <li><a href="#">Centre d'aide</a></li>
-              <li><a href="#">Nous contacter</a></li>
-            </ul>
-          </div>
-        </div>
-      </footer>
-    </div>
+        <section class="footer_item">
+          <h3>Assistance</h3>
+          <ul>
+            <li><a href="#">Centre d'aide</a></li>
+            <li><a href="#">Nous contacter</a></li>
+          </ul>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
