--- a/index.html
+++ b/index.html
@@ -24,18 +24,10 @@
 
   <body>
     <nav>
-      <!--logo-->
-      <img
-        src="images/logo/Reservia.svg"
-        class="logo"
-        alt="logo agence de voyage"
-      />
-      <!--menu-->
+      <img src="./images/logo/Reservia.svg" alt="logo de Reservia" id="logo" />
       <ul class="menu">
-        <div class="menu_responsive">
-          <li class="menu_link"><a href="#hostings">Hébergements</a></li>
-          <li class="menu_link"><a href="#activities">Activités</a></li>
-        </div>
+        <li class="menu_link"><a href="#hostings">Hébergements</a></li>
+        <li class="menu_link"><a href="#activities">Activités</a></li>
         <li class="menu_login"><a href="#">S'inscrire</a></li>
       </ul>
     </nav>
@@ -145,7 +137,7 @@
                 <figcaption class="main_hostings_figcaption">
                   <h3 class="main_hostings_title">Auberge la Cannebière</h3>
                   <p class="main_hostings_text">
-                    Nuit à partir de <strong>25 €</strong>
+                    Nuit à partir de 25 <strong>€</strong>
                   </p>
                   <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -178,7 +170,7 @@
                 <figcaption class="main_hostings_figcaption">
                   <h3 class="main_hostings_title">Hôtel du port</h3>
                   <p class="main_hostings_text">
-                    Nuit à partir de <strong>52 €</strong>
+                    Nuit à partir de 52 <strong> €</strong>
                   </p>
                   <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -211,7 +203,7 @@
                 <figcaption class="main_hostings_figcaption">
                   <h3 class="main_hostings_title">Hôtel les mouettes</h3>
                   <p class="main_hostings_text">
-                    Nuit à partir de <strong>76 €</strong>
+                    Nuit à partir de 76<strong> €</strong>
                   </p>
                   <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -243,7 +235,7 @@
                 <figcaption class="main_hostings_figcaption">
                   <h3 class="main_hostings_title">Hôtel de la mer</h3>
                   <p class="main_hostings_text">
-                    Nuit à partir de <strong>46 €</strong>
+                    Nuit à partir de 46<strong> €</strong>
                   </p>
                   <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -276,7 +268,7 @@
                 <figcaption class="main_hostings_figcaption">
                   <h3 class="main_hostings_title">Auberge le panier</h3>
                   <p class="main_hostings_text">
-                    Nuit à partir de <strong>23 €</strong>
+                    Nuit à partir de 23<strong> €</strong>
                   </p>
                   <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -309,7 +301,7 @@
                 <figcaption class="main_hostings_figcaption">
                   <h3 class="main_hostings_title">Hôtel chez Amina</h3>
                   <p class="main_hostings_text">
-                    Nuit à partir de <strong>96 €</strong>
+                    Nuit à partir de 96<strong>€</strong>
                   </p>
                   <div class="main_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -354,7 +346,7 @@
                     Hôtel le soleil du matin
                   </h3>
                   <p class="popular_hostings_text">
-                    Nuit à partir de <strong>128 €</strong>
+                    Nuit à partir de 128<strong>€</strong>
                   </p>
                   <div class="popular_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -389,7 +381,7 @@
                     Au coeur de l'eau Chambres d'hôtes
                   </h3>
                   <p class="popular_hostings_text">
-                    Nuit à partir de <strong>71 €</strong>
+                    Nuit à partir de 71<strong>€</strong>
                   </p>
                   <div class="popular_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
@@ -424,7 +416,7 @@
                     Hôtel tout bleu et blanc
                   </h3>
                   <p class="popular_hostings_text">
-                    Nuit à partir de <strong>68 €</strong>
+                    Nuit à partir de 68<strong>€</strong>
                   </p>
                   <div class="popular_hostings_stars">
                     <i class="fas fa-star star_icon" data-active="true"></i>
